--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "face-rec-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cryptocoolby.github.io/face-rec-app/",
   "dependencies": {
     "ajv": "^6.5.4",
     "clarifai": "^2.8.1",
@@ -17,6 +18,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.0"
   }
 }
